--- a/src/MathEngine.Algebra/MathEngine.Algebra.csproj
+++ b/src/MathEngine.Algebra/MathEngine.Algebra.csproj
@@ -8,7 +8,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<LangVersion>13.0</LangVersion>
+	<LangVersion>latest</LangVersion>
   </PropertyGroup>
 
 </Project>
