add sin func test, need to fix product/quotient simplification via grouping

--- a/src/MathEngine.Tests/MathEngine.Tests.csproj
+++ b/src/MathEngine.Tests/MathEngine.Tests.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MathEngine.Algebra\MathEngine.Algebra.csproj" />
+    <ProjectReference Include="..\MathEngine.Trig\MathEngine.Trig.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
