add trig impl for DerivativeInfo

--- a/src/MathEngine.Trig/MathEngine.Trig.csproj
+++ b/src/MathEngine.Trig/MathEngine.Trig.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MathEngine.Functions\MathEngine.Functions.csproj" />
+    <ProjectReference Include="..\MathEngine.CalcPlugin\MathEngine.CalcPlugin.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
