change calc library to univariate

--- a/src/MathEngine.Calculus.Univariate/MathEngine.Calculus.Univariate.csproj
+++ b/src/MathEngine.Calculus.Univariate/MathEngine.Calculus.Univariate.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\MathEngine.Algebra\MathEngine.Algebra.csproj" />
+    <ProjectReference Include="..\MathEngine.CalcPlugin\MathEngine.CalcPlugin.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
