--- a/src/MathEngine.Tests/MathEngine.Tests.csproj
+++ b/src/MathEngine.Tests/MathEngine.Tests.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MathEngine.Algebra\MathEngine.Algebra.csproj" />
     <ProjectReference Include="..\MathEngine.Trig\MathEngine.Trig.csproj" />
+    <ProjectReference Include="..\MathEngine.Calculus.Univariate\MathEngine.Calculus.Univariate.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
